# master_thesis

./: .gitignore  pyproject.toml  readme.md
masters/models/: __init__.py  subword_tokenizer.py
masters/notebooks/: experiment_1.ipynb
masters/utils/: __init__.py  evalute_tokenizer.py  split_csv.py
